fix: add margin to hr element for improved spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -95,6 +95,10 @@ ul {
   list-style-type: none;
 }
 
+hr {
+  margin-bottom: var(--spacing-medium);
+}
+
 /*---------------------------------------
   Layout
 ---------------------------------------*/
